--- a/source/_posts/2013-08-21-lirc-web-v0-0-5.markdown
+++ b/source/_posts/2013-08-21-lirc-web-v0-0-5.markdown
@@ -6,6 +6,8 @@ comments: true
 categories: [raspberrypi, opensourceuniversalremote, lirc_web]
 ---
 
+**August 10, 2014 Update:** Latest version is now [lirc_web v0.0.8](http://alexba.in/blog/2014/08/10/lirc-web-v0-0-8/)
+
 I've updated the ``lirc_web`` project (available at [http://github.com/alexbain/lirc_web](http://github.com/alexbain/lirc_web)) to v0.0.5. This version fixes a bug related to the [swig](https://npmjs.org/package/swig) npm module that was causing an error when trying to view the project in a browser.
 
 If you were encountering a JavaScript error after trying to install ``lirc_web`` this should fix it. Thanks to the folks that reported this.
